--- a/app/assets/stylesheets/modules/_variables.sass
+++ b/app/assets/stylesheets/modules/_variables.sass
@@ -22,9 +22,9 @@ $gutter: 4rem
   --baseline: 1rem
   --gutter: 4rem
 
-  --default: #f3f3f3
-  --white: #ffffff
-  --faint: #ececec
+  --default: #f2f0ed
+  --white: #faf9f7
+  --faint: #ebe9e6
   --grey: #999
   --black: #070707
 
