--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -11,7 +11,8 @@
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
-    = javascript_include_tag 'application'
+    = javascript_include_tag "deprecated", "data-turbo-track": "reload", defer: true
+    = javascript_include_tag "esbuild", "data-turbo-track": "reload", defer: true
 
   %body
     .centered{role: 'layout'}
