add unused postcss pipeline

--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -12,7 +12,7 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'deprecated', media: 'all'
     = javascript_include_tag "deprecated", "data-turbo-track": "reload", defer: true
     = javascript_include_tag "esbuild", "data-turbo-track": "reload", defer: true
 
