--- a/app/views/layouts/modal.html.haml
+++ b/app/views/layouts/modal.html.haml
@@ -16,7 +16,7 @@
     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
     = stylesheet_link_tag 'audio', media: 'all'
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'deprecated', media: 'all'
     = javascript_include_tag "deprecated", "data-turbo-track": "reload", defer: true
     = javascript_include_tag "esbuild", "data-turbo-track": "reload", defer: true
 
