--- a/app/views/layouts/plain.html.haml
+++ b/app/views/layouts/plain.html.haml
@@ -12,7 +12,7 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'deprecated', media: 'all'
 
     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     = javascript_include_tag "deprecated", "data-turbo-track": "reload", defer: true
