replaced a bunch of spaghetti with a stimulus controller

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,23 +11,13 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'audio', media: 'all'
-    = stylesheet_link_tag 'deprecated', media: 'all'
-
-    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    = javascript_include_tag "deprecated", "data-turbo-track": "reload", defer: true
-    = javascript_include_tag "esbuild", "data-turbo-track": "reload", defer: true
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4000ff">
-    <meta name="msapplication-TileColor" content="#4000ff">
-    <meta name="theme-color" content="#ff0000">
+    
+    = render partial: "layouts/partials/links"
+    = render partial: "layouts/snippets/favicon"
+    
     %meta{name: 'viewport', content: "width=device-width, initial-scale=1, user-scalable=no"}/
 
-  %body
+  %body{data: {controller: "layout", action: "scroll@window->layout#onScroll"}}
     .wrapper.-container{role: 'layout'}
       = render partial: 'layouts/partials/meta-nav', locals: { omnipresent: true, fixed: true, small: false}
 
@@ -47,5 +37,5 @@
 
     = render partial: 'layouts/partials/search'
     = render partial: 'layouts/partials/expansive-nav'
-    = auto_discovery_link_tag(:rss, feed_url(format: :xml))
     = render partial: 'layouts/snippets/analytics'
+    = auto_discovery_link_tag(:rss, feed_url(format: :xml))
