--- a/app/views/layouts/plain.html.haml
+++ b/app/views/layouts/plain.html.haml
@@ -12,11 +12,10 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'deprecated', media: 'all'
+    = stylesheet_link_tag 'application', media: 'all'
 
     <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    = javascript_include_tag "deprecated", "data-turbo-track": "reload", defer: true
-    = javascript_include_tag "esbuild", "data-turbo-track": "reload", defer: true
+    = javascript_include_tag 'application'
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
