replace podcast plyr w/ stimulus

--- a/app/views/articles/_podcast.html.erb
+++ b/app/views/articles/_podcast.html.erb
@@ -1,5 +1,5 @@
-<div class='podcast'>
-  <audio id='player' controls>
+<div class='podcast' data-controller='player'>
+  <audio controls>
     <source src="<%= podcast_url -%>" type="audio/mp3">
   </audio>
   <div class='podcast-meta box'>
