--- a/app/views/layouts/snippets/_favicon.html.haml
+++ b/app/views/layouts/snippets/_favicon.html.haml
@@ -4,4 +4,4 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4000ff">
 <meta name="msapplication-TileColor" content="#4000ff">
-<meta name="theme-color" content="#ff0000">
+<meta name="theme-color" content="#4000FF">
