--- a/app/views/v2/subscriptions/new.html.haml
+++ b/app/views/v2/subscriptions/new.html.haml
@@ -1,100 +1,60 @@
-- set_meta_tags title: "Become a subscriber"
+.wrapper.-small{role: 'layout'}
+  %header.page-header
+    %h1.h.-h2= @product.name
 
-.block.-pt4.-px2.-bg-image{style: "background-image: url('#{ asset_path "ads/cranes.jpg" }')"}
-  .p.-centered
-    .block.-pt2
-      %h1.h.-h1.c.-serif Help our reporters<br>cover the important stories
-      .block.-mt2.p.-t3 Become a subscriber for as little as €6 per month
-
-  %div
-    PUT THE FORM HERE
-
-.block.-bt.-bg-default.-py4
-  .block.-my4.-pt4
-    .wrapper.-small{role: 'layout'}
-      .block.-mb1
-        %h3.h.-h2.-centered Independent, impactful
-      .p.-t3.-centered
+  .block.-mb4
+    .p.-t3.-sf
+      - if @product.is_print?
         :markdown
-          Dublin Inquirer is funded by its subscribers. That way, we can stay independent, and focused on the stories that readers want and need – and stories that make a big impact on the city:
+          **Monthly print edition** featuring a selection of our favourite online articles delivered to your door, in addition to unlimited **digital access**, including our full archive.
 
-  .wrapper.-large{role: 'layout'}
-    .block.-mt4.-mb2
-      .row
-        .col-xs-12.col-md-4.flex
-          .block.-p2.-bg-faint.-b.-mb2
-            .block.-mb2
-              %figure.artwork.-landscape
-                = image_tag "https://d1trxack2ykyus.cloudfront.net/artwork/c9d12d29a59b2ae8/large_image.jpg"
-
-            .block.p.-t4.c.-w4
-              .block.-mb1
-                %h3.c.-w4.-serif  A giant illegal waste dump has been growing for years in the north of the city.
-
-              :markdown
-                For as a long as a decade, a council-owned green space has been used for broad-daylight illegal dumping, with trucks driving up to add to the giant mounds of waste.
-
-        .col-xs-12.col-md-4.flex
-          .block.-p2.-bg-faint.-b.-mb2
-            .block.-mb2
-              %figure.artwork.-landscape
-                = image_tag "https://d1trxack2ykyus.cloudfront.net/artwork/49b678399185e22b/large_image.jpg"
-
-            .block.p.-t4.c.-w4
-              .block.-mb1
-                %h3.c.-w4.-serif FOI Chief Overrules Government Refusal to Release Fire-Safety Reports
-
-              :markdown
-                We forced the Department of Education to release fire safety audits for schools with structural defects, which led to a national media storm, more inspections and remedial works, and the promise of an inquiry.
-
-        .col-xs-12.col-md-4.flex
-          .block.-p2.-bg-faint.-b.-mb2
-            .block.-mb2
-              %figure.artwork.-landscape
-                = image_tag "https://d1trxack2ykyus.cloudfront.net/artwork/626e4eb64db850b4/large_image.jpg"
-
-            .block.p.-t4.c.-w4
-              .block.-mb1
-                %h3.c.-w4.-serif Should Homeless Families Have to Use the Side Door?
-
-              :markdown
-                We highlighted the restrictive rules homeless families have to follow in hotels where they live in emergency accommodation.
-
-  .wrapper.-small{role: 'layout'}
-    .block.-mb4
-      .p.-t3.-centered
-        The work we do is regularly picked up by newspapers, blogs, and radio stations, but without our on-the-ground reporting, these stories wouldn't be covered. And that wouldn't be possible without the support of readers like you.
-
-  %hr.-separator
-
-  .block.-my4
-    .wrapper.-small{role: 'layout'}
-      .block.-bg-faint.-p4.-b
-        .block.-mb2
-          %h3.h.-h3.-centered Become a subscriber:
-        .p.-t4.-centered
-          = link_to raw("Digital + Print &mdash; €9/month"), product_path(:print), class: 'block -mb1 button -standard -big'
-          = link_to raw("Digital &mdash; €6/month"), product_path(:digital), class: 'block -mb1 button -standard -big'
-          = link_to raw("Student (Digital-only) &mdash; €3/month"), product_path(:student), class: 'block button -standard -big'
-
-.block.-bt.-py4.-bg-faint
-  .wrapper.-small{role: 'layout'}
-    .block.-p4.-b.-bg-default
-      %header.block.-mb4
-        %h3.h.-h4.-centered Frequently asked questions
-
-      .p.-t4.-sf
+      - else
         :markdown
-          #### What does 'independent' and 'reader-funded' mean?
+          Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
 
-          _Independent_ means that the company is wholly owned by us. We don't need to answer to investors or shareholders who demand we maximise profitability or push a particular agenda.
+  = form_with model: @subscription, url: [:v2, :subscriptions], method: :post, local: true, html: {"data-controller": "subscibe-form", "data-action": "subscibe-form#subscribe"} do |f|
+    .block.-form
+      .block.-b.-p2.-my2.-bg-faint
+        .field
+          .twofer
+            .field
+              = f.label :given_name, "First name"
+              = f.text_field :given_name
+              - if @subscription.errors[:given_name].any?
+                .error= @subscription.full_messages_for(:given_name).first
 
-          _Reader-funded_ means the _vast_ majority of our revenue comes from readers who subscribe. We think this aligns our incentives with those of our readers, rather than those of advertisers.
+            .field
+              = f.label :surname, "Surname"
+              = f.text_field :surname
+              - if @subscription.errors[:surname].any?
+                .error= @subscription.full_messages_for(:surname).first
 
-          #### Is there an unwaged rate?
+        .field
+          = f.label :email_address
+          = f.email_field :email_address
+          - if @subscription.errors[:email_address].any?
+            .error= @subscription.full_messages_for(:email_address).first
 
-          Nobody will be turned away for want of funds. If you're not working or are otherwise unable to afford a subscription, send [us an email](mailto:info@dublininquirer.com) and we'll see if we can work something out.
+        - if !logged_in?
+          .field
+            = f.label :password
+            = f.password_field :password
+            - if @subscription.errors[:password].any?
+              .error= @subscription.full_messages_for(:password).first
+      .block.-b.-p2.-my2.-bg-faint
+        .field
+          %label Credit/debit card
+          %div{"data-subscibe-form-target": "cardField"}
 
-          #### What is the cancellation policy?
+      %nav.block.-mt2.actions
+        %button.button.-standard.-big Subscribe
 
-          You can cancel at any time. Your subscription will continue until the end of your billing cycle, and you won't be billed again. No long term contracts or funny business.
+  .block.-my4.-pb4
+    .p.-t4.-sf.-centered
+      %ul.list.-nav
+        - if @plan.interval_count == 1
+          %li #{ number_to_currency((@plan.amount/100.0), unit: '€', precision: 2) } billed #{ @plan.interval }ly
+        - else
+          %li #{ number_to_currency((@plan.amount/100.0), unit: '€', precision: 2) } billed every #{ pluralize @plan.interval_count, @plan.interval }
+        %li Subscriptions renew automatically
+        %li Cancel any time
