--- a/app/views/v2/subscriptions/new.html.haml
+++ b/app/views/v2/subscriptions/new.html.haml
@@ -12,49 +12,11 @@
         :markdown
           Unlimited digital access to **DublinInquirer.com**, including our full archive, optimised for desktop and mobile.
 
-  = form_with model: @subscription, url: [:v2, :subscriptions], method: :post, local: true, html: {"data-controller": "subscibe-form", "data-action": "subscibe-form#subscribe"} do |f|
-    .block.-form
-      .block.-b.-p2.-my2.-bg-faint
-        .field
-          .twofer
-            .field
-              = f.label :given_name, "First name"
-              = f.text_field :given_name
-              - if @subscription.errors[:given_name].any?
-                .error= @subscription.full_messages_for(:given_name).first
-
-            .field
-              = f.label :surname, "Surname"
-              = f.text_field :surname
-              - if @subscription.errors[:surname].any?
-                .error= @subscription.full_messages_for(:surname).first
-
-        .field
-          = f.label :email_address
-          = f.email_field :email_address
-          - if @subscription.errors[:email_address].any?
-            .error= @subscription.full_messages_for(:email_address).first
-
-        - if !logged_in?
-          .field
-            = f.label :password
-            = f.password_field :password
-            - if @subscription.errors[:password].any?
-              .error= @subscription.full_messages_for(:password).first
-      .block.-b.-p2.-my2.-bg-faint
-        .field
-          %label Credit/debit card
-          %div{"data-subscibe-form-target": "cardField"}
-
-      %nav.block.-mt2.actions
-        %button.button.-standard.-big Subscribe
+  #subscribe-form{data: {'action': "/v2/subscribe/create", user: @user_data.to_json, plan: {address_required: @plan.requires_address?, stripe_id: @plan.stripe_id}.to_json}}
 
   .block.-my4.-pb4
     .p.-t4.-sf.-centered
       %ul.list.-nav
-        - if @plan.interval_count == 1
-          %li #{ number_to_currency((@plan.amount/100.0), unit: '€', precision: 2) } billed #{ @plan.interval }ly
-        - else
-          %li #{ number_to_currency((@plan.amount/100.0), unit: '€', precision: 2) } billed every #{ pluralize @plan.interval_count, @plan.interval }
+        %li #{ number_to_currency((@plan.amount/100.0), unit: '€', precision: 2) } billed monthly
         %li Subscriptions renew automatically
         %li Cancel any time
