--- a/app/views/layouts/partials/_modal-nav.html.haml
+++ b/app/views/layouts/partials/_modal-nav.html.haml
@@ -19,5 +19,5 @@
             %span Log in
 
         - if !logged_in? or !current_user.subscriber?
-          = link_to :products, class: 'meta-nav_item -subscribe' do
+          = link_to "/v2/subscribe", class: 'meta-nav_item -subscribe' do
             Subscribe
