link to new form

--- a/app/views/home/_sidebar.html.haml
+++ b/app/views/home/_sidebar.html.haml
@@ -19,7 +19,7 @@
         :markdown
           Dublin Inquirer is funded by its readers, not advertisers.
 
-      .block.-mt2= link_to "Subscribe", :products, class: 'button -white'
+      .block.-mt2= link_to "Subscribe", "/v2/subscribe", class: 'button -white'
       
   - elsif !is_christmastime?
     .block.block.-py2.-px1.-mb2.-bg-blue
