--- a/app/views/products/_enticement.html.haml
+++ b/app/views/products/_enticement.html.haml
@@ -50,4 +50,4 @@
                     We do in-depth, original reporting about the issues that shape Dublin. We're not funded by advertisers. We're funded by readers like you.
 
                 %nav.block.-mt4
-                  = link_to raw("Become a subscriber &rarr;"), :products, class: 'button -standard -big'
+                  = link_to raw("Become a subscriber &rarr;"), "/v2/subscribe", class: 'button -standard -big'
