hide migration stuff

--- a/app/views/password_resets/new.html.haml
+++ b/app/views/password_resets/new.html.haml
@@ -21,4 +21,5 @@
       %ul
         %li= link_to "Don't have an account? Sign up", :register
         %li= link_to "Remembered your password? Log in", :login
-        %li= link_to "Had an account before 2018? Migrate it", '/migrate'
+        - if false
+          %li= link_to "Had an account before 2018? Migrate it", '/migrate'
