--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -48,4 +48,5 @@
       %h3.c.-w8 Other options
       %ul
         %li= link_to "Log in to an existing account", :login
-        %li= link_to "Had an account before 2018? Migrate it", '/migrate'
+        - if false
+          %li= link_to "Had an account before 2018? Migrate it", '/migrate'
