--- a/app/views/layouts/partials/_newsletter.html.haml
+++ b/app/views/layouts/partials/_newsletter.html.haml
@@ -5,7 +5,7 @@
         :markdown
           Sign up to get our free Dublin Inquirer email newsletter each Wednesday, with headlines from the week’s online edition, updates from inside the newsroom, and more. It’s a little reminder when we have a new edition out, and a way for you to stay in touch with what we’re up to.
   
-      %form#mc-embedded-subscribe-form.cta-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank", data: {turbo: false, butts: "true"}}
+      %form#mc-embedded-subscribe-form.cta-form{:action => "https://dublininquirer.us10.list-manage.com/subscribe/post?u=24e41bd5d7188febc86b710f7&id=b34685dddf", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank", data: {turbo: false}}
         .cta-form_content
           .field
             %label{:for => "mce-EMAIL"} Email Address
@@ -13,4 +13,4 @@
             %div{"aria-hidden" => "true", :style => "position: absolute; left: -9999px;"}
               %input{:name => "b_24e41bd5d7188febc86b710f7_b34685dddf", :tabindex => "-1", :type => "text", :value => ""}/
           .action
-            %input#mc-embedded-subscribe.button{:name => "subscribe", :type => "submit", :value => "Sign up"}/
+            %input#mc-embedded-subscribe.button{:name => "subscribe", :type => "submit", :value => "Ok"}/
