--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -37,7 +37,7 @@
       .field.-check
         = f.label :subscribed_weekly do
           = f.check_box :subscribed_weekly
-          Get our free weekly email newsletter?
+          Get our free email newsletter?
         = render_errors_for(@user, :subscribed_weekly)
 
       %nav.block.-mt2.actions
