--- a/app/assets/stylesheets/components/_sidebar.sass
+++ b/app/assets/stylesheets/components/_sidebar.sass
@@ -36,7 +36,7 @@
     margin: 0
     border: 0
     color: var(--default)
-    border: 1px solid var(--default)
+    border: 0
     text-align: left
     line-height: calc(var(--baseline) * 1.25)
     width: 100%
@@ -46,8 +46,10 @@
       border-color: var(--default)
   
   .field
+    box-shadow: 0 0 0 1px var(--blue)
     
   .action
+    box-shadow: 0 0 0 1px var(--blue)
     background-color: var(--blue)
   
   input[type="submit"]
