--- a/app/views/articles/excerpts/_result.html.haml
+++ b/app/views/articles/excerpts/_result.html.haml
@@ -4,7 +4,7 @@
       %figure.artwork.-landscape
         .overlay.block.-b.-bg-default
           .p.-t5.c.-w4= display_category(article.category)
-        - if article.featured_artwork.present? && article.featured_artwork.image.present?
+        - if article.featured_artwork && article.featured_artwork.image.present? && article.featured_artwork.image.url.present?
           = image_tag article.featured_artwork.image.small.url, loading: 'lazy'
 
     .p.-centered
